# Neuraforge

./: .dockerignore  .gitignore  Dockerfile  NEURAFORGE.code-workspace  README.md  app.py  generate.py  model_architecture.py  new_template.json  pyproject.toml  requirements.txt
ai_agents/: coder_agent.py  debugger_agent.py  planner.py
core/: config.py  email_service.py  file_manager.py  gemini_llm.py  groq_llm.py  llm.py  models.py  project_analyzer.py  terminal_runner.py
data/: ecommerce_content.py  website_content.py
database/models/: __init__.py  ai_feedback.py  page.py  project_file.py  section.py  shared_access.py  snapshot.py  user.py  website.py
ml/: scrape_templates.py  tokenizer.py  train.py
modules/admin/: __init__.py  routes.py
modules/ai_agent/: routes.py
modules/ai_generator/: agent_graph.py  design_engine.py  design_memory.py  layout_generator.py  promt.py  routes.py  service.py  validator.py
modules/auth/: routes.py  service.py  token_service.py
modules/chatbot/: agent_bot.py  basic_bot.py  memory.py  routes.py  website_bot.py
modules/mcp/: permissions.py  registry.py  tools.py
static/: style.css
templates/: ai_agent.html  base.html  dashboard.html  ecommerce.css  ecommerce.html  ecommerce.js  ecommerce.py  edit.html  ide.html  landing.html  login.html  new_dashboard.html  preview.html  pricing.html  register.html  templates_gallery.html  verify_otp.html
tests/: test_agent.py  test_agent_security.py  test_ai_generator_graph.py  test_ai_generator_routes.py  test_ai_generator_service.py
vector_store/: embeddings.py  vector_index.py
(+6 files in other folders)
