[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neuraforge"
version = "0.1.0"
description = "NEURAFORGE Agentic AI Platform"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
norecursedirs = ["pytest-cache-files-*", ".git", "node_modules", "legacy_artifacts", "__pycache__"]
